# sina

./: Cargo.toml  README.md  aria_openVINS.yaml  pipeline.md
aria_config/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
input/: room_sem1.txt  room_sem2.txt  room_sem3.txt  room_sem5.txt
input/0/: ase_scene_language.txt  trajectory.csv
input/1/: trajectory.csv
input/2/: ase_scene_language.txt  trajectory.csv
input/3/: ase_scene_language.txt  trajectory.csv
input/4/: ase_scene_language.txt  trajectory.csv
input/5/: ase_scene_language.txt
src/: data.rs  device_stream.rs  main.rs  msckf.rs  navgraph.rs  navigation.rs  navmesh.rs  obstacles.rs  parser.rs  raw_data.rs  room.rs  room_cdt.rs  room_graph.rs  room_topology.rs  sensor_buffer.rs  sensor_data.rs  sina.rs  utils.rs
src/data/: bbox.rs  door.rs  wall.rs
src/msckf/: utils.rs
src/navigation/: data.rs  navgraph.rs  navigator.rs  navmesh.rs  parser.rs  path.rs  raw_data.rs  room_cdt.rs  room_graph.rs  room_topology.rs  utils.rs
src/navigation/data/: bbox.rs  door.rs  wall.rs
src/navigation/parser/: bbox.rs  door.rs  raw_data.rs  skip.rs  utils.rs  wall.rs
src/navigation/raw_data/: raw_bbox.rs  raw_door.rs  raw_wall.rs
src/parser/: bbox.rs  door.rs  raw_data.rs  room.rs  skip.rs  utils.rs  wall.rs
src/raw_data/: raw_bbox.rs  raw_door.rs  raw_wall.rs  wall.rs
src/room/: bbox.rs  door.rs  wall.rs
src/utils/: cdt.rs  vec3.rs
stream/: common.py  device_stream.py  sender.py
