[package]
name = "sina"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
futures = "0.3.32"
i_overlay = "7.0.0"
nalgebra = "0.35.0"
ordered-float = "5.3.0"
r2r = "0.9.5"
rerun = "0.33.0"
serde = "1.0.228"
serde_json = "1.0.150"
spade = "2.15.1"
tokio = "1.52.3"
winnow = "1.0.3"
zmq = "0.10.0"
